--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,7 @@ img{
 }
 body{
     font-family: "Roboto", sans-serif;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
+    color: #434455;
     background: #fff;
 }
 /* ==============/Common styles ==============*/
@@ -26,12 +25,13 @@ body{
     font-family: "Raleway", sans-serif;
         font-weight: 700;
         font-size: 18px;
-        line-height: 1.16;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
+        color: #4d5ae5;
 }
-.text-blue{
-    color: #4d5ae5
+.logo-text{
+    color: #2e2f42;
 }
 .nav-list-link{
         font-weight: 500;
@@ -43,9 +43,17 @@ body{
 .nav-list-link:focus {
     color: #404bbf;
 }
+.contacts-studio{
+    font-style: normal;
+}
 .contacts:hover,
 .contacts:focus{
 color: #404bbf;
+
+}
+.contacts{
+   color: #434455;
+   line-height: 1.5;
 }
 
 /* ==============/Page Header styles ==============*/
@@ -53,6 +61,7 @@ color: #404bbf;
 /* ============== Hero Section styles ==============*/
 .hero{
     background: #2e2f42;
+    
 }
 .main-title{
     font-family: "Roboto", sans-serif;
@@ -61,10 +70,20 @@ color: #404bbf;
         line-height: 1.07;
         text-align: center;
         color: #fff;
+        letter-spacing: 0.02em;
 }
 .btn{
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-        background: #4d5ae5;
+    background: #4d5ae5;
+}
+.btn:hover,
+.btn:focus{
+    background-color: #404BBF;
+    
 }
 
 /* ============== /Hero Section styles ==============*/
@@ -76,6 +95,7 @@ color: #404bbf;
         line-height: 1.11;
         text-transform: capitalize;
         text-align: center;
+        letter-spacing: 0.02em;
 }
 .benefits-list-title{
         font-weight: 500;
@@ -90,11 +110,18 @@ color: #404bbf;
 /* ============== /Benefits Section styles ==============*/
 
 /* ============== Team Section styles ==============*/
+.team-section{
+    background-color: #F4F4FD;
+}
+.team-list{
+    background-color: #FFFFFF;
+}
 .team-person-fullname{
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
         text-align: center;
+        letter-spacing: 0.02em;
 }
 .team-person-position{
         font-size: 16px;
@@ -106,6 +133,7 @@ color: #404bbf;
 /* ==============/Team Section styles ==============*/
 
 /* ==============Portfolio styles ==============*/
+
 .project-name{
         font-weight: 500;
         font-size: 20px;
@@ -128,7 +156,10 @@ background: #2e2f42;
         line-height: 1.16;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        color: #f4f4fd;
+        color: #4d5ae5;
+}
+.page-footer-text{
+    color: #f4f4fd;
 }
 .page-footer-text{
         font-size: 16px;
